--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 --index-url https://download.pytorch.org/whl/cu126
 torch==2.8.0+cu126
 torchvision==0.23.0+cu126
-numpy==2.0.2
+numpy
 pillow==11.3.0
